--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ h1,
 h2,
 h3 {
     font-weight: 700;
-    margin: 0 0 10px;
 }
 
 a {
@@ -25,6 +24,14 @@ a:hover {
 
 ul {
     list-style: none;
+}
+
+.ul-basic-parent {
+    padding: 10;
+    margin: 0;
+}
+
+.ul-basic {
     padding: 0;
     margin: 0;
 }
@@ -83,10 +90,8 @@ nav a {
     align-items: center;
 }
 
-.profile-pic {
-    place-items: center;
-    float: right;
-    margin: 0 auto;
+#profile-pic {
+    text-align: center;
 }
 
 /* Skills section */
@@ -97,6 +102,10 @@ nav a {
 
 .skills h2 {
     margin-bottom: 10px;
+}
+
+#skills-h3 {
+    text-align: center;
 }
 
 .skills ul {
@@ -124,28 +133,7 @@ nav a {
     flex: 1 1 33%;
     padding: 10px;
     text-align: left;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.overlay:hover {
-    opacity: 1;
-}
-
-.overlay h3,
-.overlay p {
-    margin: 0;
-    padding: 20px;
+    position: relative;
 }
 
 .grid-projects{
@@ -153,6 +141,23 @@ nav a {
     border-width: 2px;
     border-style: groove;
     border-radius: 25px
+}
+
+.grid-projects h3{
+    margin-top: -0.1em;
+    font-size: 130%;
+}
+
+.grid-date{
+    margin-top: -0.3em;
+    font-size: 85%;
+    color: #00000070;
+}
+
+.grid-bottom{
+    border-top: 1px solid black;
+    bottom: 0.4rem;
+    position: absolute;
 }
 
 /* Work History */
