--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ article strong {
 
 /* Solid border */
 hr.solid {
-    border-top: 1px #bbb;
+    border-top: 1px #0000003d;
 }
 
 .social-link {
