--- a/style.css
+++ b/style.css
@@ -241,10 +241,11 @@ hr.solid {
 
 .flag {
     padding: 30;
-    width: 40px;
+    width: 50px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 10%;
     border: none;
-    margin: 10px 35px -10px;
+    margin: 10px 11px -10px;
+    margin-right: 47px;
     transition: background-color 0.5s;
 }
